[package]
name = "servoscheduler"
version = "0.1.0"
authors = ["Kevin Brodsky <corax26@gmail.com>"]

[[bin]]
name = "server"
path = "src/server_main.rs"

[[bin]]
name = "client"
path = "src/client_main.rs"

[dependencies]
log = "0.4"
env_logger = "0.5.3"
chrono = "0.4"
bitflags = "1.0.1"
num = "0.1.41"
tarpc = "*"
tarpc-plugins = "*"
serde = "*"
serde_derive = "*"
futures = "*"
tokio-core = "*"
